H3CIPMSJAVA-20180830/src/objects/Product_Unit__c.object
<CustomObject>
    <fields>
        <fullName>External_Id__c</fullName>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Product__c</fullName>
        <label>General Product</label>
        <referenceTo>General_Product__c</referenceTo>
        <relationshipName>Product_UnitToGeneral_Product</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Part_Description__c</fullName>
        <label>Part Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Part_Qty__c</fullName>
        <label>Part Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Manufactured BOM</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>General_Product__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>10/1/2016 12:00 AM</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Part number</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>